syntax = "proto3";

import "google/protobuf/timestamp.proto";

package contract.v1;
message Events {
    repeated Factory_FeeAmountEnabled factory_fee_amount_enableds = 1;
    repeated Factory_OwnerChanged factory_owner_changeds = 2;
    repeated Factory_PoolCreated factory_pool_createds = 3;
    repeated Pools_Burn pools_burns = 4;
    repeated Pools_Collect pools_collects = 5;
    repeated Pools_CollectProtocol pools_collect_protocols = 6;
    repeated Pools_Flash pools_flashes = 7;
    repeated Pools_IncreaseObservationCardinalityNext pools_increase_observation_cardinality_nexts = 8;
    repeated Pools_Initialize pools_initializes = 9;
    repeated Pools_Mint pools_mints = 10;
    repeated Pools_SetFeeProtocol pools_set_fee_protocols = 11;
    repeated Pools_Swap pools_swaps = 12;
}
message Calls {
    repeated Factory_CreatePoolCall factory_call_create_pools = 1;
    repeated Factory_EnableFeeAmountCall factory_call_enable_fee_amounts = 2;
    repeated Factory_SetOwnerCall factory_call_set_owners = 3;
    repeated Pools_BurnCall pools_call_burns = 4;
    repeated Pools_CollectCall pools_call_collects = 5;
    repeated Pools_CollectProtocolCall pools_call_collect_protocols = 6;
    repeated Pools_FlashCall pools_call_flashes = 7;
    repeated Pools_IncreaseObservationCardinalityNextCall pools_call_increase_observation_cardinality_nexts = 8;
    repeated Pools_InitializeCall pools_call_initializes = 9;
    repeated Pools_MintCall pools_call_mints = 10;
    repeated Pools_SetFeeProtocolCall pools_call_set_fee_protocols = 11;
    repeated Pools_SwapCall pools_call_swaps = 12;
}
message EventsCalls {
    Events events = 1;
    Calls calls = 2;
}
message Factory_FeeAmountEnabled {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    uint64 fee = 5;
    int64 tick_spacing = 6;
}
message Factory_OwnerChanged {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes old_owner = 5;
    bytes new_owner = 6;
}
message Factory_PoolCreated {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes token0 = 5;
    bytes token1 = 6;
    uint64 fee = 7;
    int64 tick_spacing = 8;
    bytes pool = 9;
}
  
message Factory_CreatePoolCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    bytes token_a = 6;
    bytes token_b = 7;
    uint64 fee = 8;
    bytes output_pool = 9;
}
message Factory_EnableFeeAmountCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    uint64 fee = 6;
    int64 tick_spacing = 7;
}
message Factory_SetOwnerCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    bytes u_owner = 6;
}
    
message Pools_Burn {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes owner = 6;
    int64 tick_lower = 7;
    int64 tick_upper = 8;
    string amount = 9;
    string amount0 = 10;
    string amount1 = 11;
}
    
message Pools_Collect {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes owner = 6;
    bytes recipient = 7;
    int64 tick_lower = 8;
    int64 tick_upper = 9;
    string amount0 = 10;
    string amount1 = 11;
}
    
message Pools_CollectProtocol {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes sender = 6;
    bytes recipient = 7;
    string amount0 = 8;
    string amount1 = 9;
}
    
message Pools_Flash {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes sender = 6;
    bytes recipient = 7;
    string amount0 = 8;
    string amount1 = 9;
    string paid0 = 10;
    string paid1 = 11;
}
    
message Pools_IncreaseObservationCardinalityNext {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    uint64 observation_cardinality_next_old = 6;
    uint64 observation_cardinality_next_new = 7;
}
    
message Pools_Initialize {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    string sqrt_price_x96 = 6;
    int64 tick = 7;
}
    
message Pools_Mint {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes sender = 6;
    bytes owner = 7;
    int64 tick_lower = 8;
    int64 tick_upper = 9;
    string amount = 10;
    string amount0 = 11;
    string amount1 = 12;
}
    
message Pools_SetFeeProtocol {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    uint64 fee_protocol0_old = 6;
    uint64 fee_protocol1_old = 7;
    uint64 fee_protocol0_new = 8;
    uint64 fee_protocol1_new = 9;
}
    
message Pools_Swap {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes sender = 6;
    bytes recipient = 7;
    string amount0 = 8;
    string amount1 = 9;
    string sqrt_price_x96 = 10;
    string liquidity = 11;
    int64 tick = 12;
}
    
message Pools_BurnCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    int64 tick_lower = 7;
    int64 tick_upper = 8;
    string amount = 9;
    string output_amount0 = 10;
    string output_amount1 = 11;
}
    
message Pools_CollectCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    bytes recipient = 7;
    int64 tick_lower = 8;
    int64 tick_upper = 9;
    string amount0_requested = 10;
    string amount1_requested = 11;
    string output_amount0 = 12;
    string output_amount1 = 13;
}
    
message Pools_CollectProtocolCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    bytes recipient = 7;
    string amount0_requested = 8;
    string amount1_requested = 9;
    string output_amount0 = 10;
    string output_amount1 = 11;
}
    
message Pools_FlashCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    bytes recipient = 7;
    string amount0 = 8;
    string amount1 = 9;
    bytes data = 10;
}
    
message Pools_IncreaseObservationCardinalityNextCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    uint64 observation_cardinality_next = 7;
}
    
message Pools_InitializeCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    string sqrt_price_x96 = 7;
}
    
message Pools_MintCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    bytes recipient = 7;
    int64 tick_lower = 8;
    int64 tick_upper = 9;
    string amount = 10;
    bytes data = 11;
    string output_amount0 = 12;
    string output_amount1 = 13;
}
    
message Pools_SetFeeProtocolCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    uint64 fee_protocol0 = 7;
    uint64 fee_protocol1 = 8;
}
    
message Pools_SwapCall {
    string call_tx_hash = 1;
    google.protobuf.Timestamp call_block_time = 2;
    uint64 call_block_number = 3;
    uint64 call_ordinal = 4;
    bool call_success = 5;
    string call_address = 6;
    bytes recipient = 7;
    bool zero_for_one = 8;
    string amount_specified = 9;
    string sqrt_price_limit_x96 = 10;
    bytes data = 11;
    string output_amount0 = 12;
    string output_amount1 = 13;
}
